--- a/map.html
+++ b/map.html
@@ -1,76 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport"></meta>
-<title>CooperQ2 - Google Fusion Tables</title>
-<style type="text/css">
-html, body, #googft-mapCanvas {
-  height: 300px;
-  margin: 0;
-  padding: 0;
-  width: 500px;
-}
-</style>
-
-<script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3"></script>
-
-<script type="text/javascript">
-  function initialize() {
-    google.maps.visualRefresh = true;
-    var isMobile = (navigator.userAgent.toLowerCase().indexOf('android') > -1) ||
-      (navigator.userAgent.match(/(iPod|iPhone|iPad|BlackBerry|Windows Phone|iemobile)/));
-    if (isMobile) {
-      var viewport = document.querySelector("meta[name=viewport]");
-      viewport.setAttribute('content', 'initial-scale=1.0, user-scalable=no');
-    }
-    var mapDiv = document.getElementById('googft-mapCanvas');
-    mapDiv.style.width = isMobile ? '100%' : '500px';
-    mapDiv.style.height = isMobile ? '100%' : '300px';
-    var map = new google.maps.Map(mapDiv, {
-      center: new google.maps.LatLng(35.06777848140802, -88.7027168125),
-      zoom: 4,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    });
-    map.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(document.getElementById('googft-legend-open'));
-    map.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(document.getElementById('googft-legend'));
-
-    layer = new google.maps.FusionTablesLayer({
-      map: map,
-      heatmap: { enabled: false },
-      query: {
-        select: "col7",
-        from: "1UoreOHTH86QO7ePl_NUyLrIwUq4pX_JCyoor1KpC",
-        where: ""
-      },
-      options: {
-        styleId: 2,
-        templateId: 2
-      }
-    });
-
-    if (isMobile) {
-      var legend = document.getElementById('googft-legend');
-      var legendOpenButton = document.getElementById('googft-legend-open');
-      var legendCloseButton = document.getElementById('googft-legend-close');
-      legend.style.display = 'none';
-      legendOpenButton.style.display = 'block';
-      legendCloseButton.style.display = 'block';
-      legendOpenButton.onclick = function() {
-        legend.style.display = 'block';
-        legendOpenButton.style.display = 'none';
-      }
-      legendCloseButton.onclick = function() {
-        legend.style.display = 'none';
-        legendOpenButton.style.display = 'block';
-      }
-    }
-  }
-
-  google.maps.event.addDomListener(window, 'load', initialize);
-</script>
-</head>
-
-<body>
-  <div id="googft-mapCanvas"></div>
-</body>
-</html>
+<p><strong>As State Elections Draw Closer, Q3 Fundraising Totals Signal Candidate&rsquo;s Progress</strong></p>
+<p><strong>&nbsp;</strong></p>
+<p><em>11.6.16</em></p>
+<p><em>&nbsp;</em></p>
+<p><em>by Brenden Belluardo</em></p>
+<p><em>&nbsp;</em></p>
+<p>As Election Day approaches, Q3 finance reports offer a final chance to gauge the progress of the candidates for governor in North Carolina. This year&rsquo;s campaign is spearheaded by incumbent Republican nominee Pat McCrory, and Democratic candidate Roy Cooper. Cooper raised over $8.8 million during the third quarter, which runs from July 1 to Oct. 22. McCrory netted nearly $5.2 million in the same time period.</p>
+<p>&nbsp;</p>
+<p>With tensions over the controversial HB2 law rising throughout the state in recent months, Governor McCrory&rsquo;s fundraising deficit has reached over $3 million for this quarter alone. While McCrory is raising less money than his opponent, he is still exceeding his individual donation totals by nearly 30 percent from his successful 2012 campaign. It remains to be seen whether the Governor&rsquo;s support of the law &ndash; which has led to the removal of events such as the 2017 NBA All-Star Game from the state &ndash; will cost him in the upcoming election.</p>
+<p>&nbsp;</p>
+<p>According to The Huffington Post&rsquo;s poll-tracking model<a href="#_ftn1" name="_ftnref1">[1]</a>, Cooper leads McCrory by over three percentage points, which indicates a likely lead after accounting for polling spread. While Cooper&rsquo;s lead is made clearer through his significant fundraising advantage, the source of each candidate&rsquo;s funding tells a greater story.</p>
+<p>&nbsp;</p>
+<p>The NC State Board of Elections requires candidates to submit quarterly finance reports that record each campaign contribution as well as information such as the donor&rsquo;s name, type of donation, and other means of identification. The data from these reports indicates that only about 58 percent of all funding to Cooper&rsquo;s campaign during the past quarter was generated through individual contributions. The remainder of funding was granted through political committee contributions, party contributions, as well as miscellaneous refunds interest.</p>
+<p>&nbsp;</p>
+<p>Conversely, more than 67 percent of fundraising for McCrory&rsquo;s campaign in the same amount of time was gathered from individuals. It appears that while the incumbent has received less donations in total, a higher concentration of his fundraising is from a grassroots background than his opponent.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>Such a discrepancy in financial support from political committees raises questions about how McCrory&rsquo;s support of HB2 has influenced donations from third-party organizations. Surprisingly, at this point through the Governor&rsquo;s last election, an even greater percentage of his donations had come from citizens of North Carolina. While numerous organizations such as the NBA and NCAA have taken their business elsewhere, outside support for the McCrory campaign has remained relatively unaffected in terms of fundraising.</p>
+<p>&nbsp;</p>
+<p>Regardless, it appears that political committees still have a firm grasp on the election for governor. Both candidates collected over 98 percent of their overall contributions from citizens, but those donations contribute little to each candidate&rsquo;s total financial footprint. Neither candidate has published their opinions on campaign finances to their respective websites.</p>
+<p>&nbsp;</p>
+<p>Looking deeper into the donations received from individuals differentiates the candidates even further. While Cooper received donations from over twice the number of citizens as McCrory in the Third Quarter, they both obtained nearly the same number of donations totaling over $1000. The higher concentration of large donors for McCrory have helped keep him in striking distance financially as the Nov. 8 date comes closer to fruition.</p>
+<p>&nbsp;</p>
+<p>The following maps show individual donations for each candidate above $1000:</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>This election looks to be a major turning point for the direction the state will head in. As more contributions come in as Election Day gets closer, McCrory&rsquo;s fundraising deficit will truly be put to the test. Will his large donors provide the funding he needs to retain his seat as Governor? Or will Cooper&rsquo;s influx of outside donations and support against HB2 turn the tides this November?</p>
+<p>&nbsp;</p>
+<p><a href="#_ftnref1" name="_ftn1">[1]</a> <em>http://elections.huffingtonpost.com/pollster/2016-north-carolina-governor-mccrory-vs-cooper</em></p>
