--- a/map.html
+++ b/map.html
@@ -21,9 +21,11 @@
 <p>&nbsp;</p>
 <p>Looking deeper into the donations received from individuals differentiates the candidates even further. While Cooper received donations from over twice the number of citizens as McCrory in the Third Quarter, they both obtained nearly the same number of donations totaling over $1000. The higher concentration of large donors for McCrory have helped keep him in striking distance financially as the Nov. 8 date comes closer to fruition.</p>
 <p>&nbsp;</p>
-<p>The following maps show individual donations for each candidate above $1000:</p>
+<p>The following maps show individual donations for each candidate above $1000 in North Carolina:</p>
 <p>&nbsp;</p>
+<iframe width="500" height="300" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col7+from+1H3sGjcuCf1LdjVc2EJ_LV4UOfbLdcUc3lvI9OGr7&amp;viz=MAP&amp;h=false&amp;lat=35.21476443690718&amp;lng=-79.51540895&amp;t=1&amp;z=7&amp;l=col7&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
 <p>&nbsp;</p>
+<iframe width="500" height="300" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col7+from+1TtOywIh8K_yxuFN1yq4xHrkkQisXg_L5L5STwkfN&amp;viz=MAP&amp;h=false&amp;lat=35.62881970546604&amp;lng=-78.77465920000002&amp;t=1&amp;z=7&amp;l=col7&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
 <p>This election looks to be a major turning point for the direction the state will head in. As more contributions come in as Election Day gets closer, McCrory&rsquo;s fundraising deficit will truly be put to the test. Will his large donors provide the funding he needs to retain his seat as Governor? Or will Cooper&rsquo;s influx of outside donations and support against HB2 turn the tides this November?</p>
 <p>&nbsp;</p>
 <p><a href="#_ftnref1" name="_ftn1">[1]</a> <em>http://elections.huffingtonpost.com/pollster/2016-north-carolina-governor-mccrory-vs-cooper</em></p>
