--- a/article.html
+++ b/article.html
@@ -1,3 +1,7 @@
+<html>
+  <head>
+  </head>
+  <body>
 <p><strong>As State Elections Draw Closer, Q3 Fundraising Totals Signal Candidate&rsquo;s Progress</strong></p>
 <p><strong>&nbsp;</strong></p>
 <p><em>11.6.16</em></p>
@@ -31,3 +35,6 @@
 <p>This election looks to be a major turning point for the direction the state will head in. As more contributions come in as Election Day gets closer, McCrory&rsquo;s fundraising deficit will truly be put to the test. Will his large donors provide the funding he needs to retain his seat as Governor? Or will Cooper&rsquo;s influx of outside donations and support against HB2 turn the tides this November?</p>
 <p>&nbsp;</p>
 <p><a href="#_ftnref1" name="_ftn1">[1]</a> <em>http://elections.huffingtonpost.com/pollster/2016-north-carolina-governor-mccrory-vs-cooper</em></p>
+  </body>
+  
+</html>
